dslexp/parsers/grammars/ocl/OCLParser.py
# Generated from OCL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OCLParser ( Parser ):

    grammarFileName = "OCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'context'", "'inv'", "':'", "'init:'", 
                     "'derive:'", "'enumeration'", "'{'", "'}'", "'literal'", 
                     "'Sequence'", "'('", "')'", "'Set'", "'Bag'", "'OrderedSet'", 
                     "'Ref'", "'Map'", "','", "'Function'", "'.'", "'['", 
                     "']'", "'@pre'", "'if'", "'then'", "'else'", "'endif'", 
                     "'lambda'", "'in'", "'let'", "'='", "'not'", "'and'", 
                     "'&'", "'or'", "'xor'", "'=>'", "'implies'", "'<'", 
                     "'>'", "'>='", "'<='", "'/='", "'<>'", "'/:'", "'<:'", 
                     "'+'", "'-'", "'..'", "'|->'", "'*'", "'/'", "'mod'", 
                     "'div'", "'?'", "'!'", "'->size()'", "'->copy()'", 
                     "'->isEmpty()'", "'->notEmpty()'", "'->asSet()'", "'->asBag()'", 
                     "'->asOrderedSet()'", "'->asSequence()'", "'->sort()'", 
                     "'->any()'", "'->log()'", "'->exp()'", "'->sin()'", 
                     "'->cos()'", "'->tan()'", "'->asin()'", "'->acos()'", 
                     "'->atan()'", "'->log10()'", "'->first()'", "'->last()'", 
                     "'->front()'", "'->tail()'", "'->reverse()'", "'->tanh()'", 
                     "'->sinh()'", "'->cosh()'", "'->floor()'", "'->ceil()'", 
                     "'->round()'", "'->abs()'", "'->oclType()'", "'->allInstances()'", 
                     "'->oclIsUndefined()'", "'->oclIsInvalid()'", "'->oclIsNew()'", 
                     "'->sum()'", "'->prd()'", "'->max()'", "'->min()'", 
                     "'->sqrt()'", "'->cbrt()'", "'->sqr()'", "'->characters()'", 
                     "'->toInteger()'", "'->toReal()'", "'->toBoolean()'", 
                     "'->display()'", "'->toUpperCase()'", "'->toLowerCase()'", 
                     "'->unionAll()'", "'->intersectAll()'", "'->concatenateAll()'", 
                     "'->pow'", "'->gcd'", "'->at'", "'->union'", "'->intersection'", 
                     "'->includes'", "'->excludes'", "'->including'", "'->excluding'", 
                     "'->includesAll'", "'->symmetricDifference'", "'->excludesAll'", 
                     "'->prepend'", "'->append'", "'->count'", "'->apply'", 
                     "'->hasMatch'", "'->isMatch'", "'->firstMatch'", "'->indexOf'", 
                     "'->lastIndexOf'", "'->split'", "'->hasPrefix'", "'->hasSuffix'", 
                     "'->equalsIgnoreCase'", "'->oclAsType'", "'->oclIsTypeOf'", 
                     "'->oclIsKindOf'", "'->oclAsSet'", "'->collect'", "'|'", 
                     "'->select'", "'->reject'", "'->forAll'", "'->exists'", 
                     "'->exists1'", "'->one'", "'->any'", "'->closure'", 
                     "'->sortedBy'", "'->isUnique'", "'->subrange'", "'->replace'", 
                     "'->replaceAll'", "'->replaceAllMatches'", "'->replaceFirstMatch'", 
                     "'->insertAt'", "'->insertInto'", "'->setAt'", "'->iterate'", 
                     "';'", "'OrderedSet{'", "'Bag{'", "'Set{'", "'Sequence{'", 
                     "'Map{'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FLOAT_LITERAL", "STRING1_LITERAL", 
                      "STRING2_LITERAL", "ENUMERATION_LITERAL", "NULL_LITERAL", 
                      "MULTILINE_COMMENT", "LINE_COMMENT", "NEWLINE", "INT", 
                      "ID", "WS" ]

    RULE_multipleContextSpecifications = 0
    RULE_contextSpecification = 1
    RULE_singleInvariant = 2
    RULE_singleDerivedAttribute = 3
    RULE_enumeration = 4
    RULE_enumerationLiteral = 5
    RULE_type = 6
    RULE_expressionList = 7
    RULE_expression = 8
    RULE_basicExpression = 9
    RULE_conditionalExpression = 10
    RULE_lambdaExpression = 11
    RULE_letExpression = 12
    RULE_logicalExpression = 13
    RULE_equalityExpression = 14
    RULE_additiveExpression = 15
    RULE_factorExpression = 16
    RULE_factor2Expression = 17
    RULE_identOptType = 18
    RULE_setExpression = 19
    RULE_identifier = 20
    RULE_qualified_name = 21

    ruleNames =  [ "multipleContextSpecifications", "contextSpecification", 
                   "singleInvariant", "singleDerivedAttribute", "enumeration", 
                   "enumerationLiteral", "type", "expressionList", "expression", 
                   "basicExpression", "conditionalExpression", "lambdaExpression", 
                   "letExpression", "logicalExpression", "equalityExpression", 
                   "additiveExpression", "factorExpression", "factor2Expression", 
                   "identOptType", "setExpression", "identifier", "qualified_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    T__145=146
    T__146=147
    T__147=148
    T__148=149
    T__149=150
    T__150=151
    T__151=152
    T__152=153
    T__153=154
    T__154=155
    T__155=156
    T__156=157
    T__157=158
    T__158=159
    T__159=160
    T__160=161
    T__161=162
    T__162=163
    T__163=164
    T__164=165
    FLOAT_LITERAL=166
    STRING1_LITERAL=167
    STRING2_LITERAL=168
    ENUMERATION_LITERAL=169
    NULL_LITERAL=170
    MULTILINE_COMMENT=171
    LINE_COMMENT=172
    NEWLINE=173
    INT=174
    ID=175
    WS=176

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MultipleContextSpecificationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OCLParser.EOF, 0)

        def singleInvariant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.SingleInvariantContext)
            else:
                return self.getTypedRuleContext(OCLParser.SingleInvariantContext,i)


        def singleDerivedAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.SingleDerivedAttributeContext)
            else:
                return self.getTypedRuleContext(OCLParser.SingleDerivedAttributeContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_multipleContextSpecifications

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleContextSpecifications" ):
                return visitor.visitMultipleContextSpecifications(self)
            else:
                return visitor.visitChildren(self)




    def multipleContextSpecifications(self):

        localctx = OCLParser.MultipleContextSpecificationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_multipleContextSpecifications)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.singleInvariant()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.singleDerivedAttribute()
                    pass


                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 50
            self.match(OCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextSpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OCLParser.EOF, 0)

        def singleInvariant(self):
            return self.getTypedRuleContext(OCLParser.SingleInvariantContext,0)


        def singleDerivedAttribute(self):
            return self.getTypedRuleContext(OCLParser.SingleDerivedAttributeContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_contextSpecification

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextSpecification" ):
                return visitor.visitContextSpecification(self)
            else:
                return visitor.visitChildren(self)




    def contextSpecification(self):

        localctx = OCLParser.ContextSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_contextSpecification)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 52
                self.singleInvariant()
                pass

            elif la_ == 2:
                self.state = 53
                self.singleDerivedAttribute()
                pass


            self.state = 56
            self.match(OCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleInvariantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(OCLParser.ID)
            else:
                return self.getToken(OCLParser.ID, i)

        def expression(self):
            return self.getTypedRuleContext(OCLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_singleInvariant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleInvariant" ):
                return visitor.visitSingleInvariant(self)
            else:
                return visitor.visitChildren(self)




    def singleInvariant(self):

        localctx = OCLParser.SingleInvariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_singleInvariant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(OCLParser.T__0)
            self.state = 59
            self.match(OCLParser.ID)
            self.state = 60
            self.match(OCLParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==175:
                self.state = 61
                self.match(OCLParser.ID)


            self.state = 64
            self.match(OCLParser.T__2)
            self.state = 65
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleDerivedAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualified_name(self):
            return self.getTypedRuleContext(OCLParser.Qualified_nameContext,0)


        def type_(self):
            return self.getTypedRuleContext(OCLParser.TypeContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OCLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_singleDerivedAttribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleDerivedAttribute" ):
                return visitor.visitSingleDerivedAttribute(self)
            else:
                return visitor.visitChildren(self)




    def singleDerivedAttribute(self):

        localctx = OCLParser.SingleDerivedAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleDerivedAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(OCLParser.T__0)
            self.state = 68
            self.qualified_name()
            self.state = 69
            self.match(OCLParser.T__2)
            self.state = 70
            self.type_()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 71
                self.match(OCLParser.T__3)
                self.state = 72
                self.expression()


            self.state = 75
            self.match(OCLParser.T__4)
            self.state = 76
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(OCLParser.IdentifierContext,0)


        def enumerationLiteral(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.EnumerationLiteralContext)
            else:
                return self.getTypedRuleContext(OCLParser.EnumerationLiteralContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_enumeration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumeration" ):
                return visitor.visitEnumeration(self)
            else:
                return visitor.visitChildren(self)




    def enumeration(self):

        localctx = OCLParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumeration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(OCLParser.T__5)
            self.state = 79
            self.identifier()
            self.state = 80
            self.match(OCLParser.T__6)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.enumerationLiteral()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

            self.state = 86
            self.match(OCLParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(OCLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_enumerationLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumerationLiteral" ):
                return visitor.visitEnumerationLiteral(self)
            else:
                return visitor.visitChildren(self)




    def enumerationLiteral(self):

        localctx = OCLParser.EnumerationLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enumerationLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(OCLParser.T__8)
            self.state = 89
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.TypeContext)
            else:
                return self.getTypedRuleContext(OCLParser.TypeContext,i)


        def identifier(self):
            return self.getTypedRuleContext(OCLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):
